# matrx_local

./: .env.example  .gitattributes  .gitignore  AGENT_TASKS.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARMAN_TASKS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONFIGURATIONS.md  FRONTEND_INTEGRATION.md  INSTALLER.md  LESSONS.md  MATRX_LOCAL_MIGRATION_GUIDE.md  PLATFORM_AUDIT.md  PROPOSED_ARCHITECTURE.md  README.md  ROADMAP.md  TASKS.md  aimatrx-engine-aarch64-apple-darwin.spec  aimatrx-engine-x86_64-apple-darwin.spec  aimatrx-engine-x86_64-pc-windows-msvc.spec  aimatrx-engine-x86_64-unknown-linux-gnu.spec  api-endpoints.md  check_browser_errors.py  local-llm-inference-integration.md  pyproject.toml  requirements.txt  run.py  test_llm.py  whisper-transcription-integration.md
.arman/: ARMAN_TASKS.md  CHROME_AUTH_SETUP.md  HOWTO.md  MATRX_PACKAGE_INTEGRATION_NOTES.md  TESTING.md  keys.md  scraper-api-refernce.md  server-team-questions.md
.arman/need-help/: frontend.md  server.md
.arman/rules/: OVERVIEW.md  basics.md
.github/workflows/: release.yml
.matrx/: AGENT_INSTRUCTIONS.md  AGENT_TASKS.md  TASKS_FROM_USER.md
.pyupdater/: config.pyu
app/: bundled_config.py  config.py  database.py  launcher.py  main.py  preflight.py  updater.py  websocket_manager.py
app/api/: admin_routes.py  auth.py  browser_events.py  capabilities_routes.py  chat_routes.py  cloud_sync_routes.py  cross_component_envelope.py  cross_component_router.py  data_routes.py  document_routes.py  extension_auth.py  extension_boot_check.py  extension_bridge_routes.py  extension_broadcast.py  extension_handlers.py  extension_invoke.py  extension_metrics.py  extension_routes.py  extension_ws_manager.py  fetch_proxy_routes.py  files.py  hardware_routes.py  hf_token_routes.py  image_gen_routes.py  model_repo_routes.py  permissions_routes.py  platform_routes.py  proxy_routes.py  remote_scraper_routes.py  routes.py  sandbox_routes.py  scrape_routes.py  settings_routes.py  setup_routes.py  system_control.py  token_routes.py  tool_routes.py  tts_routes.py  tunnel_routes.py  tunnel_state.py  (+1 more)
app/cache/: page_cache.py
app/common/: __init__.py  access_log.py  fancy_prints.py  platform_ctx.py  route_errors.py  system_logger.py
app/core/: orchestrator.py  search.py
app/extractors/: content_extractors.py
app/models/: domain.py  responses.py
app/services/: scheduler_host.py
app/tools/: __init__.py  dispatcher.py  local_tool_manifest.py  session.py  tool_schemas.py  tool_sync.py  types.py
app/utils/: generate_api_configs.py  logging.py
app/z_from_matrx/: IGNORE.md
desktop/: .env.example  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.config.ts
desktop/scripts/: check_browser_errors.js
desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
desktop/src-tauri/binaries/: libggml-base.dylib  libggml-cpu.0.9.7.dylib  libggml-metal.0.dylib  libggml-rpc.dylib  libllama.0.0.8281.dylib  libmtmd.dylib
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: engine-icon.icns  icon.icns
desktop/src-tauri/nsis/: installer-hooks.nsh
desktop/src-tauri/sidecar/: sidecar.entitlements.plist
desktop/src-tauri/src/: floating_overlay.rs  lib.rs  main.rs
desktop/src-tauri/src/downloads/: commands.rs  manager.rs
desktop/src-tauri/src/llm/: commands.rs  config.rs  mod.rs  model_selector.rs  server.rs
desktop/src-tauri/src/transcription/: audio_capture.rs  commands.rs  config.rs  downloader.rs  hardware.rs  manager.rs  mod.rs  model_selector.rs  wake_word.rs
docs/: DOWNLOAD_SYSTEM_AUDIT_AND_PLAN.md  MATRX_EXTEND_CONNECTION.md  WEB_CLIENT_INTEGRATION.md  activity-log.md  installation-and-data-safety.md  local-llm-inference-integration.md  local-models-update.md  local-storage-architecture.md  matrx-ai-generic-openai-port.md  path-resolution-guide.md  proxy-integration-guide.md  proxy-testing-guide.md  react-migration-notes-api.md  release-script-guide.md  settings-audit.md  ux-principles.md  wake-word-training.md
hooks/: runtime_hook.py
migrations/: 001_documents_schema.sql  002_app_instances_settings.sql  003_forbidden_urls.sql  004_tunnel_access.sql  005_hardware_identity.sql  006_tunnel_ws_url.sql  007_cleanup_policies_and_stale_tunnel.sql  008_system_hardware.sql
scraper-service/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
scraper-service/.arman/: TESTING.md
scraper-service/alembic/: env.py
scraper-service/alembic/versions/: 001_initial_schema.py  002_retry_queue.py
scraper-service/app/: config.py  dependencies.py
scraper-service/app/api/: auth.py  router.py
scraper-service/app/api/routes/: content.py  docs.py  queue.py  search.py
scraper-service/app/core/: orchestrator.py
scraper-service/app/core/fetcher/: models.py  profiles.py
scraper-service/app/core/parser/: html_flattener.py  overrides.py
scraper-service/app/db/: connection.py
scraper-service/app/db/queries/: retry_queue.py
scraper-service/app/domain_config/: config_store.py
scraper-service/app/models/: enums.py  options.py  requests.py
scraper-service/app/utils/: url.py
scraper-service/tests/: conftest.py  test_live.py
scraper-service/tests/integration/: test_api_endpoints.py
scripts/: backup.sh  build-sidecar.sh  check.ps1  check.sh  download-cloudflared.sh  download-llama-server.sh  entrypoint.sh  generate-dmg-background.py  generate-engine-icon.py  generate-icons.sh  git-branches.sh  launch.sh  release.sh  setup.sh  stop.ps1  stop.sh  test_ports.py  update-scraper.sh  write_bundled_config.py
specs/: aimatrx-engine-aarch64-apple-darwin.spec  aimatrx-engine-x86_64-apple-darwin.spec  aimatrx-engine-x86_64-pc-windows-msvc.spec  aimatrx-engine-x86_64-unknown-linux-gnu.spec  matrx-engine-aarch64-apple-darwin.spec  matrx-engine-x86_64-apple-darwin.spec  matrx-engine-x86_64-pc-windows-msvc.spec  matrx-engine-x86_64-unknown-linux-gnu.spec
tests/: conftest.py  pytest.ini
(+349 files in other folders)
