[project]
name = "matrx-local"
version = "1.2.73"
description = "Companion desktop application for AI Matrx — extends web platform with local capabilities via FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core server
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "httptools",
    "pyyaml",
    "watchfiles",
    "websockets",
    # HTTP client (scraping proxy, file transfer)
    "httpx",
    # Clipboard
    "pyperclip",
    # Notifications
    "plyer",
    # macOS TCC permission checks and framework access
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
    "pyobjc-framework-AVFoundation>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-ScreenCaptureKit>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-Contacts>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-EventKit>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-Photos>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-CoreLocation>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-Speech>=12.1; sys_platform == 'darwin'",
    # System tray
    "pystray",
    "pillow",
    # Logging
    "concurrent-log-handler>=0.9.28",
    # Packaging
    "pyinstaller",
    # Database
    "asyncpg",
    "aiosqlite>=0.20.0",
    # Scraper engine (from scraper-service)
    "curl-cffi>=0.14.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "selectolax>=0.4.6",
    "cachetools>=5.5,<7.0",
    "tldextract>=5.3.1",
    "markdownify>=0.14.1",
    "tabulate>=0.9.0",
    "PyMuPDF>=1.27.1",
    "pytesseract>=0.3.13",
    # Matrx
    "matrx-utils>=1.0.19",
    "matrx-orm>=3.0.25",
    "matrx-ai>=0.1.22",
    "screeninfo>=0.8.1",
    # Media downloading & video processing
    "yt-dlp>=2024.1.0",
    "imageio-ffmpeg>=0.5.1",
    # Camera capture & video recording (webcam, VideoCapture, VideoWriter)
    "opencv-python>=4.10.0",
    # Screen capture fallback (used when system ffmpeg is unavailable)
    "mss>=9.0.1",
    # Browser automation
    "playwright",
    # System monitoring & process management
    "psutil>=6.0.0",
    # Network discovery (mDNS)
    "zeroconf>=0.131.0",
    # Audio hardware I/O
    "sounddevice>=0.5.5",
    "numpy>=2.4.2",
]

[project.optional-dependencies]
transcription = [
    "openai-whisper",
]
all = [
    "openai-whisper",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
python-preference = "only-managed"
