[project]
name = "matrx-local"
version = "1.3.85"
description = "Companion desktop application for AI Matrx — extends web platform with local capabilities via FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core server
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "python-multipart",
    "httptools",
    "pyyaml",
    "watchfiles",
    "websockets",
    # HTTP client (scraping proxy, file transfer)
    "httpx",
    # Clipboard
    "pyperclip",
    # Notifications
    "plyer",
    # macOS TCC permission checks and framework access
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
    "pyobjc-framework-AVFoundation>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-ScreenCaptureKit>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-Contacts>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-EventKit>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-Photos>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-CoreLocation>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-Speech>=12.1; sys_platform == 'darwin'",
    # System tray
    "pystray",
    "pillow",
    # Logging
    "concurrent-log-handler>=0.9.28",
    # Packaging
    "pyinstaller",
    # Database
    "asyncpg",
    "aiosqlite>=0.20.0",
    # Scraper engine (from scraper-service)
    "curl-cffi>=0.14.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "selectolax>=0.4.6",
    "cachetools>=5.5,<7.0",
    "tldextract>=5.3.1",
    "markdownify>=0.14.1",
    "tabulate>=0.9.0",
    "PyMuPDF>=1.27.1",
    "pytesseract>=0.3.13",
    # Matrx — all sourced via path/editable from the sibling aidream
    # workspace (see [tool.uv.sources] below). Pulling from aidream lets
    # matrx-local consume in-flight changes (Phase 3a/3b generic-openai
    # registry + vision translator in matrx-ai, Phase 2 matrx-rag, Phase 6
    # matrx-connect JWKS, etc.) BEFORE they ship to PyPI. PyPI publishes
    # happen via tag-push to ``matrx-<pkg>/v<x.y.z>`` (see
    # aidream/.github/workflows/publish-package.yml). The PyPI version
    # constraints below are floors — uv resolves to the editable path when
    # one is configured, otherwise to PyPI.
    "matrx-utils>=1.0.19",
    "matrx-orm>=3.0.32",
    # matrx-ai>=0.1.26 — pinned to PyPI (see [tool.uv.sources] note
    # below for why we are NOT using the path dep for matrx-ai yet).
    "matrx-ai>=0.1.26",
    "matrx-connect>=0.1.1",
    "matrx-rag>=0.1.0",
    # matrx-scheduler — the desktop sidecar participates in the cross-component
    # scheduling spine as surface='desktop'. Sourced from the sibling aidream
    # repo via the [tool.uv.sources] path entry below — it is not yet
    # published to PyPI. Activation is gated by MATRX_LOCAL_SCHEDULER_ENABLED;
    # the dep is always installed so the package is importable for the host
    # configurator.
    "matrx-scheduler",
    # Supabase Python client — powers the engine↔extension Broadcast plumb
    # in `app/api/extension_broadcast.py` (C2.d substrate). Already pulled in
    # transitively via matrx-ai/matrx-utils, but we declare it explicitly so
    # the import graph is self-documenting and a future minor-version bump
    # in those upstream packages can't silently drop it.
    "supabase>=2.28.0",
    "screeninfo>=0.8.1",
    # Media downloading & video processing
    "yt-dlp>=2024.1.0",
    "imageio-ffmpeg>=0.5.1",
    # Camera capture & video recording (webcam, VideoCapture, VideoWriter)
    "opencv-python>=4.10.0",
    # Screen capture fallback (used when system ffmpeg is unavailable)
    "mss>=9.0.1",
    # Browser automation
    "playwright",
    # System monitoring & process management
    "psutil>=6.0.0",
    # Network discovery (mDNS)
    "zeroconf>=0.131.0",
    # Audio hardware I/O
    "sounddevice>=0.5.5",
    "numpy>=2.4.2",
    # On-device wake word detection (ONNX inference, no cloud, cross-platform)
    # openwakeword's tflite-runtime Linux dep has no cp313+ wheels; we use ONNX only.
    "openwakeword>=0.6.0",
    "onnxruntime>=1.18.0",
    # Text-to-speech (Kokoro-82M via ONNX Runtime, ~300 MB model downloaded on first use)
    # espeak-ng is bundled cross-platform via espeakng-loader (no system install needed)
    "kokoro-onnx>=0.5.0",
    "soundfile>=0.13.0",
]

[project.optional-dependencies]
transcription = [
    "openai-whisper",
]
image-gen = [
    # Hugging Face diffusers-based image generation (large install ~3-10 GB)
    # Install with: uv sync --extra image-gen
    # Torch: CPU-only by default. For GPU support install torch with CUDA manually.
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "diffusers>=0.32.0",
    "transformers>=4.45.0",
    "accelerate>=0.33.0",
    "sentencepiece>=0.2.0",
    "protobuf>=3.20.0",
]
all = [
    "openai-whisper",
    # Note: image-gen is NOT included in 'all' intentionally — it's a multi-GB
    # optional install. Enable explicitly with: uv sync --extra image-gen
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-timeout",
    "ruff",
]

[tool.uv.sources]
# Every matrx-* dep is sourced via editable path from the sibling
# aidream repo's uv workspace. This lets matrx-local consume in-flight
# changes (Phase 3a/3b in matrx-ai, Phase 2 matrx-rag, Phase 6
# matrx-connect JWKS, etc.) BEFORE they ship to PyPI. When a package is
# published, the PyPI version constraint in [project].dependencies stays
# in place as a floor; drop the corresponding line below to switch to
# PyPI resolution.
#
# Anyone building matrx-local must have the sibling aidream repo cloned
# at the relative path above. This is already required today (the
# original matrx-scheduler path dep — which has been here since Phase 1
# — added the same constraint), so there is no additional barrier.
#
# Publish-readiness check: see aidream/.github/workflows/publish-package.yml
# for the OIDC-trusted publish workflow. Pushing a tag like
# ``matrx-ai/v0.2.0`` triggers a PyPI release of that package.
matrx-utils = { path = "../aidream/packages/matrx-utils", editable = true }
matrx-orm = { path = "../aidream/packages/matrx-orm", editable = true }
# matrx-ai is intentionally NOT path-pinned. The aidream-workspace
# matrx-ai 0.2.0 currently has an import-graph coupling to the CX
# (conversation exchange) DB models — importing the providers layer
# eagerly resolves bases like CxAgentMemoryBase via
# ``matrx_ai.db._registry.get_base(...)`` at class-definition time.
# Aidream pre-configures these via ``aidream.package_integration``
# before any matrx-ai import; matrx-local has no equivalent and
# doesn't need the CX tables (no conversation persistence). Until
# matrx-ai's import graph is restructured to allow non-DB hosts to
# import the provider layer without configure_db(), matrx-local pins
# matrx-ai to its PyPI release.
#
# This means Phase 3a (register_generic_openai_instance /
# unregister_generic_openai_instance / get_generic_openai_instance)
# and Phase 3b (vision content in GenericOpenAITranslator) — both
# shipped in aidream commits 4569faa7 and fc149bc9 — are NOT active
# in matrx-local yet. The ``local_llm_registry.py`` try/except guards
# continue to short-circuit. Activation path: cut + push tag
# ``matrx-ai/v0.2.x`` from aidream (the publish workflow at
# .github/workflows/publish-package.yml fires automatically).
matrx-connect = { path = "../aidream/packages/matrx-connect", editable = true }
matrx-rag = { path = "../aidream/packages/matrx-rag", editable = true }
matrx-scheduler = { path = "../aidream/packages/matrx-scheduler", editable = true }

[tool.uv]
python-preference = "only-managed"
# tflite-runtime has no Python 3.13/3.14 wheels.  openWakeWord uses it only on
# Linux as a second inference backend — we drive it via onnxruntime exclusively.
# The impossible marker ensures uv skips it entirely on all platforms.
override-dependencies = [
    "tflite-runtime ; python_version < '3.0'",
]
