[package]
name = "aimatrx-desktop"
version = "1.2.28"
description = "AI Matrx Desktop — Local companion for the AI Matrx platform"
authors = ["AI Matrx"]
edition = "2021"

[lib]
name = "aimatrx_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-macos-permissions = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
base64 = "0.22"

# Transcription (whisper.cpp)
whisper-cpp-plus = { version = "0.1", features = ["async"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
cpal = "0.15"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }

[features]
default = []
cuda = ["whisper-cpp-plus/cuda"]
metal = ["whisper-cpp-plus/metal"]
openblas = ["whisper-cpp-plus/openblas"]
