[package]
name = "aimatrx-desktop"
version = "1.3.62"
description = "AI Matrx Desktop — Local companion for the AI Matrx platform"
authors = ["AI Matrx"]
edition = "2021"

[lib]
name = "aimatrx_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api enables .transparent() on WebviewWindowBuilder for macOS.
# Required for the floating transcript overlay window. The feature is a no-op
# on Windows and Linux — safe to declare unconditionally.
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-macos-permissions = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"

# Transcription (whisper.cpp)
whisper-cpp-plus = { version = "0.1", features = ["async"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
cpal = "0.15"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
rubato = "1"
audioadapter-buffers = "2.0.0"
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }

# Wake word detection reuses whisper-cpp-plus — no additional dependencies needed.

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# No features are enabled by default — acceleration is opt-in per platform.
# macOS builds pass --features metal via the CI workflow.
# Windows/Linux builds can pass --features cuda or --features openblas.
default = []
cuda = ["whisper-cpp-plus/cuda"]
metal = ["whisper-cpp-plus/metal"]
openblas = ["whisper-cpp-plus/openblas"]
